--- a/index.html
+++ b/index.html
@@ -5,63 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Material+Icons+round"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Material+Icons+Round"
+    />
     <title>Admin dashboard</title>
   </head>
   <body>
     <div class="container">
       <div class="sidebar">
         <div class="tittle">
-          <i class="fi fi-bs-layout-fluid"></i>
-          <h1>Dashboard</h1>
+          <a href="">
+            <span class="material-icons-round"> dashboard </span>
+            <h1>Dashboard</h1>
+          </a>
         </div>
-        <div class="main-tabs">
+        <div class="main tab">
           <div>
-            <i class="fi fi-bs-home"></i>
-            <h2>Home</h2>
+            <a href="">
+              <span class="material-icons-round"> home </span>
+              <h2>Home</h2>
+            </a>
           </div>
           <div>
-            <i class="fi fi-bs-user"></i>
-            <h2>Profile</h2>
+            <a href="">
+              <span class="material-icons-round"> person </span>
+              <h2>Profile</h2>
+            </a>
           </div>
           <div>
-            <i class="fi fi-bs-comment-alt"></i>
-            <h2>Messages</h2>
+            <a href="">
+              <span class="material-icons-round"> message </span>
+              <h2>Messages</h2>
+            </a>
           </div>
           <div>
-            <i class="fi fi-bs-time-past"></i>
-            <h2>History</h2>
+            <a href="">
+              <span class="material-icons-round"> work_history </span>
+              <h2>History</h2>
+            </a>
           </div>
           <div>
-            <i class="fi fi-bs-list-check"></i>
-            <h2>Tasks</h2>
+            <a href="">
+              <span class="material-icons-round"> task </span>
+              <h2>Tasks</h2>
+            </a>
           </div>
           <div>
-            <i class="fi fi-bs-following"></i>
-            <h2>Communities</h2>
+            <a href="">
+              <span class="material-icons-round"> people </span>
+              <h2>Communities</h2>
+            </a>
           </div>
         </div>
-        <div class="help-tabs">
+        <div class="help tab">
           <div>
-            <i class="fi fi-bs-settings-sliders"></i>
-            <h2>Settings</h2>
+            <a href="">
+              <span class="material-icons-round"> settings </span>
+              <h2>Settings</h2>
+            </a>
           </div>
           <div>
-            <i class="fi fi-bs-interrogation"></i>
-            <h2>Support</h2>
+            <a href="">
+              <span class="material-icons-round"> help </span>
+              <h2>Support</h2>
+            </a>
           </div>
           <div>
-            <i class="fi fi-bs-shield-check"></i>
-            <h2>Privacy</h2>
+            <a href="">
+              <span class="material-icons-round"> verified_user </span>
+              <h2>Privacy</h2>
+            </a>
           </div>
         </div>
       </div>
       <div class="header">
         <div class="search-bar">
-          <i class="fi fi-bs-search"></i>
+          <span class="material-icons-round"> search </span>
           <input type="search" />
         </div>
         <div class="user-profile-small">
-          <i class="fi fi-bs-bell"></i>
+          <span class="material-icons-round"> notifications_active </span>
           <img src="./profile-picture.jpg" alt="Profile picture" />
           <p class="user-name">Morgan Oakley</p>
         </div>
@@ -79,80 +107,163 @@
         </div>
       </div>
       <div class="dashboard">
+        <h3>Your Projects</h3>
         <div class="projects">
-          <h3>Your Projects</h3>
           <div class="project-card">
-            <h4>Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div>
+              <h4>Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+            </div>
             <div class="project-buttons">
-              <button type="button"><i class="fi fi-bs-heart"></i></button>
-              <button type="button"><i class="fi fi-bs-eye"></i></button>
-              <button type="button"><i class="fi fi-bs-share"></i></button>
+              <button type="button">
+                <span class="material-icons-round"> star </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> visibility </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> share </span>
+              </button>
             </div>
           </div>
           <div class="project-card">
-            <h4>Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div>
+              <h4>Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+            </div>
             <div class="project-buttons">
-              <button type="button"><i class="fi fi-bs-heart"></i></button>
-              <button type="button"><i class="fi fi-bs-eye"></i></button>
-              <button type="button"><i class="fi fi-bs-share"></i></button>
+              <button type="button">
+                <span class="material-icons-round"> star </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> visibility </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> share </span>
+              </button>
             </div>
           </div>
           <div class="project-card">
-            <h4>Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div>
+              <h4>Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+            </div>
             <div class="project-buttons">
-              <button type="button"><i class="fi fi-bs-heart"></i></button>
-              <button type="button"><i class="fi fi-bs-eye"></i></button>
-              <button type="button"><i class="fi fi-bs-share"></i></button>
+              <button type="button">
+                <span class="material-icons-round"> star </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> visibility </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> share </span>
+              </button>
             </div>
           </div>
           <div class="project-card">
-            <h4>Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div>
+              <h4>Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+            </div>
             <div class="project-buttons">
-              <button type="button"><i class="fi fi-bs-heart"></i></button>
-              <button type="button"><i class="fi fi-bs-eye"></i></button>
-              <button type="button"><i class="fi fi-bs-share"></i></button>
+              <button type="button">
+                <span class="material-icons-round"> star </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> visibility </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> share </span>
+              </button>
             </div>
           </div>
           <div class="project-card">
-            <h4>Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div>
+              <h4>Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+            </div>
             <div class="project-buttons">
-              <button type="button"><i class="fi fi-bs-heart"></i></button>
-              <button type="button"><i class="fi fi-bs-eye"></i></button>
-              <button type="button"><i class="fi fi-bs-share"></i></button>
+              <button type="button">
+                <span class="material-icons-round"> star </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> visibility </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> share </span>
+              </button>
             </div>
           </div>
           <div class="project-card">
-            <h4>Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div>
+              <h4>Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+            </div>
             <div class="project-buttons">
-              <button type="button"><i class="fi fi-bs-heart"></i></button>
-              <button type="button"><i class="fi fi-bs-eye"></i></button>
-              <button type="button"><i class="fi fi-bs-share"></i></button>
+              <button type="button">
+                <span class="material-icons-round"> star </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> visibility </span>
+              </button>
+              <button type="button">
+                <span class="material-icons-round"> share </span>
+              </button>
             </div>
           </div>
         </div>
+        <h3>Announcements</h3>
         <div class="announcements">
-          <h3>Announcements</h3>
           <div class="announcements-card">
             <h5>Site Maintenance</h5>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum.
+            </p>
           </div>
+          <hr>
           <div class="announcements-card">
             <h5>Site Maintenance</h5>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum.
+            </p>
           </div>
+          <hr>
           <div class="announcements-card">
             <h5>Site Maintenance</h5>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum.
+            </p>
           </div>
         </div>
+        <h3>Trending</h3>
         <div class="trending">
-          <h3>Trending</h3>
           <div class="trending-user">
             <img src="./profile-picture.jpg" alt="Profile picture" />
             <div class="text">
